--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/EK_Build.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EK_Build.data",
-        frameworkUrl: buildUrl + "/EK_Build.framework.js",
-        codeUrl: buildUrl + "/EK_Build.wasm",
+        dataUrl: buildUrl + "/EK_Build.data.gz",
+        frameworkUrl: buildUrl + "/EK_Build.framework.js.gz",
+        codeUrl: buildUrl + "/EK_Build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BoilerPlate",
