--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1080 height=1920 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1284 height=2778 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/EK_Build.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EK_Build.data.gz",
-        frameworkUrl: buildUrl + "/EK_Build.framework.js.gz",
-        codeUrl: buildUrl + "/EK_Build.wasm.gz",
+        dataUrl: buildUrl + "/EK_Build.data",
+        frameworkUrl: buildUrl + "/EK_Build.framework.js",
+        codeUrl: buildUrl + "/EK_Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BoilerPlate",
@@ -98,8 +98,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "1080px";
-        canvas.style.height = "1920px";
+        canvas.style.width = "1284px";
+        canvas.style.height = "2778px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
