--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | BoilerPlate</title>
@@ -121,6 +122,10 @@
             };
 
       document.body.appendChild(script);
+
+      //added
+      const initData = window['Telegram'].WebApp.initData;
+      console.log("here: " + initData);
 
     </script>
   </body>
