--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       document.body.appendChild(script);
 
       //added
-      const initData = window['Telegram'].WebApp.initData;
+      const initData = window.Telegram.WebApp;
       console.log("here: " + initData);
 
     </script>
