--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       document.body.appendChild(script);
 
       //added
-      const initData = window.Telegram.WebApp;
-      console.log("here: " + initData);
+      const initDataaa = window.Telegram.WebApp.initData;
+      console.log("here: " + initDataaa);
 
     </script>
   </body>
