--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       document.body.appendChild(script);
 
       //added
-      const initDataaa = window.Telegram.WebApp.initData;
+      var initDataaa = window.Telegram.WebApp.initData;
       console.log("here: " + initDataaa);
 
     </script>
