--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <script src="https://telegram.org/js/telegram-web-app.js?56">
-        console.log("here 1: " + window.Telegram.WebApp.initData);
-    </script>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | BoilerPlate</title>
@@ -126,7 +124,7 @@
       document.body.appendChild(script);
 
       //added
-      console.log("here 2: " + window.Telegram.WebApp.initData);
+      console.log("here: " + window.Telegram.WebApp.initData);
 
     </script>
   </body>
