attempt bug fix IOS #3

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/EK_Build.loader.js";
+      var loaderUrl = buildUrl + "/5b996258adf01bca650c1b175e0f1e52.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EK_Build.data",
-        frameworkUrl: buildUrl + "/EK_Build.framework.js",
-        codeUrl: buildUrl + "/EK_Build.wasm",
+        dataUrl: buildUrl + "/bcf99958252b092e9e0daa9d591c26da.data.unityweb",
+        frameworkUrl: buildUrl + "/28ef53c31eca2b492b386766e0c0d4a4.framework.js.unityweb",
+        codeUrl: buildUrl + "/da8632e51aeee84bb0ac485e25709b7a.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BoilerPlate",
